--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,10 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: DumitritaZ/fussioncomm-ict   # înlocuiește cu userul tău
   branch: main
+  base_url: https://fussioncomm-auth.onrender.com
+  auth_endpoint: /auth
+
 
 media_folder: "assets/uploads"
 public_folder: "/assets/uploads"
