Initial commit - website preview version

--- a/auth/package.json
+++ b/auth/package.json
@@ -3,9 +3,11 @@
   "type": "module",
   "private": true,
   "scripts": {
+    "protect": "node ./tools/inject-author.js \"Dumitrița Zancanu\" \"zancanudumitrita@gmail.com\" \"https://fussioncomm-preview.onrender.com\"",
     "start": "node server.js"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
